:art: made review images smaller in size :bug: fixed screen size where carousels stop running to when they are visible on screen.

--- a/scss/sections/destinationSection/_destinationSection-tablet.scss
+++ b/scss/sections/destinationSection/_destinationSection-tablet.scss
@@ -1,6 +1,6 @@
 .destinationSection {
   // @include flexColCentered;
-  width: 768px;
+  width: 1190px;
 
   .destinationText {
     display: flex;
